--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -33,7 +33,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: web-crawler-api
+          images: ${{ secrets.DOCKER_HUB_USERNAME }}/web-crawler-api
           tags: |
             type=ref,event=branch
             type=ref,event=pr
@@ -51,7 +51,7 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           # 启用缓存以加快构建速度
-          cache-from: type=registry,ref=web-crawler-api:latest
+          cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/web-crawler-api:latest
           cache-to: type=inline
       
       # 部署到生产环境（可选，需要配置SSH密钥）
