--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -34,12 +34,16 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: ${{ secrets.DOCKER_HUB_USERNAME }}/web-crawler-api
+          # 配置标签策略：
+          # 1. 有tag时，推送latest和tag版本号
+          # 2. 没有tag时，只推送latest
           tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=sha
+            # 始终推送latest标签
+            type=raw,value=latest
+            # 当有semver格式的tag时，推送到对应的版本标签
+            type=semver,pattern={{version}},enable={{is_semver}}
+            type=semver,pattern={{major}}.{{minor}},enable={{is_semver}}
+            type=semver,pattern={{major}},enable={{is_semver}}
       
       # 构建并推送Docker镜像
       - name: Build and push
