ci(docker): 移除semver标签推送的条件判断
由于semver标签推送总是启用，移除冗余的enable条件判断以简化配置

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -41,9 +41,9 @@ jobs:
             # 始终推送latest标签
             type=raw,value=latest
             # 当有semver格式的tag时，推送到对应的版本标签
-            type=semver,pattern={{version}},enable={{is_semver}}
-            type=semver,pattern={{major}}.{{minor}},enable={{is_semver}}
-            type=semver,pattern={{major}},enable={{is_semver}}
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
       
       # 构建并推送Docker镜像
       - name: Build and push
